--- a/CSS-hw2/style.css
+++ b/CSS-hw2/style.css
@@ -13,7 +13,7 @@
         left: 0;    
         width: 100%;
         
-        /* display: flex; */
+        display: inline-block;
     }
     nav a{
         color: #fff;
