--- a/CSS HW2/style.css
+++ b/CSS HW2/style.css
@@ -1,20 +1,11 @@
-/* *{
-    margin: 0;
-    padding: 0;
-} */
-/* body{
-    padding-top: 0px;
-} */
-/* header {
-    
-} */
 header{
     background-color: #000;
 }
 header .black{
-    width: 1200px;
+    width: 100%;
     margin: auto;
     top:0;
+    position: fixed;
 
 }
 .bar{
@@ -37,7 +28,6 @@ header .black{
     padding:10px;
 }
 .bar a{
-    /* margin: 2px; */
     color: #fff ;
     text-decoration: none;
     display: inline-block;
@@ -51,49 +41,74 @@ span{
 }
 
 .white{
-    border: #0000ff solid 1px;    
+    background-color: #fff;
     width: 100%;
-    margin: auto;
+    top: 40px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+
 }
 
 .tour{
     background-color: #ffff;
-    /* text-align: end; */
-    /* position: fixed; */
-    /* top: 40;  */
-    /* left: 0;     */
-    width: 100%;
-    display: inline-block;
-    flex-grow: 20%;
+    width: 1200px;
     height: 75px;
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
-}
-.tour img{
-    margin: 20px;
-    padding: 26px 0px;
-}
-.tour a{
-    color: black;
-    padding: 30px 0;
-    margin: 0px 7px;
-    font-size: 4px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-}
-.freetour a{
-    border-radius: 30px;
-    color:#fff;
-    background-color: #0000ff;
-    padding: 10px 20px;
+    top: 40px;
+    position: fixed;
 }
 
+.logo .a{
+    color: white;
+    text-decoration: none;
+    font-size: 15px;
+    margin-left: 10px;
+}
+.tour img{
+    width: 170px;
+    height: 30px;
+}
+.main-menu{
+    font-size: 30;
+    flex-grow: 1;
+    margin-left: 30px;
+}
+.main-menu a{
+    font-size: 17px;
+    margin: 0 15px;
+    text-decoration: none;
+    color: #000;
+}
+.freetour {
+    background-color: #0000ff;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    margin-left: 50px;
+    height: 35px
+}
+.freetour a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 15px;
+    padding: 0 10px;
+    margin: 0;
+}
 
 .banner{
     background-color: #00142d;
+    width: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 120px;
 }
 
 .banner .wrap{
@@ -114,40 +129,31 @@ span{
 }
 
 .banner p{
-    margin: 0px 0px50px;
     color: #fff;
 }
 
-.banner .input{
-    font-size: 100%;
-    color: #fff;
-    background: unset;
-    border: 1px solid #fff;
+input
+{
+    background: none;
     border-width: 0 0 1px;
-    padding: 0.5rem 1rem;
+    width: 300px;
 }
-
-.banner .free{
-    border-radius: 30px;
-    color:#fff;
-    background-color: #0000ff;
-    padding: 1px 6px;
-    margin: 20px 0px 0px;
-    display: inline-block;
-    text-decoration: none;
-}
-
-
-ul{
+.banner .input{
     display: flex;
     flex-direction: row;
-    justify-content:space-around;
-    flex-wrap: wrap;
+    align-items: center;
 }
-.a{
-    margin: 5px;
+.banner .free{
+    border-radius: 20px;
+    color:#fff;
+    background-color: #0000ff;
+    padding: 0px 10px;
+    height: 35px;
+    margin-left: 30px;
+    display:flex;
+    align-items: center;
+    text-decoration: none;
 }
-
 
 .title{
     text-align: center;
@@ -157,13 +163,10 @@ ul{
     display: flex;
     justify-content: center;
     flex-direction: column;
-
-
 }
 .title h2{
     font-size: 38px;
     width: 1200px;
-
     line-height: 1.2;
 }
 .title p{
@@ -197,8 +200,8 @@ ul{
 .home-content img{
     width: 100%;
 }
-.home-content .info h3{
-    font-size: 20px;
+.home-content .info h2{
+    font-size: 38px;
     line-height: 1.5;
 }
 .home-content .info .list ul{
@@ -212,13 +215,10 @@ ul{
 
 }
 .info .list span{
-    width: 20px;
-    height: 20px;
     background-color: #8df;
-    text-align: center;
     border-radius: 50%;
-    vertical-align: middle;
     color: #000;
+    font-size: 20px;
 }
 
 .info a{
@@ -232,6 +232,7 @@ ul{
 .sever h2{
     text-align: center;
     font-size: 38px;
+    padding: 25px;
 }
 .sever .wrap{
     width: 1200px;
@@ -256,13 +257,13 @@ ul{
 }
 
 .pop{
-    padding-top: 70px;
-    padding-bottom: 70px;
+    margin: auto;
+    width: 1200px;
 }
 .pop h2{
     font-size: 38px;
     text-align: center;
-    margin: 0px 0px 45px;
+    padding: 25px;
 }
 
 .pop span{
@@ -277,21 +278,14 @@ ul{
     width: 1200px;
     list-style: none;
     display: flex;
+    justify-content: space-evenly;
 }
-.popularity .li{
-    width: 20%;
-    margin: auto;
-}
-.popularity .img{
-    width: 100%;
-    height: auto;
+.popularity li{
+    height: 80%;
     margin: auto;
 }
 
-
-
-
-.home-content{
+.brand{
     width: 1200px;
     margin: auto;
     display: flex;
@@ -311,7 +305,7 @@ ul{
 .bonny p{
     font-size: 16px;
     line-height: 2;
-    padding: 20px 0;
+    padding-top: 43px;
 }
 .bonny .img{
     font-size: 16px;
@@ -329,15 +323,14 @@ ul{
 }
 
 .asia {
-    padding: 0px 25px;
+    margin: auto;
+    width: 1200px;
 }
 .asia h2{
-    font-size: 250%;
-    line-height: calc(10px + 2ex + 10px);
-    margin-bottom: 50px;
+    line-height: 1.5;
     color: #fff;
     font-weight: 500;
-    margin: 0px 0px 50px;
+    margin: 0px 0px 10px;
     font-size: 38px;
 }
 
@@ -352,9 +345,6 @@ ul{
     color: #fff;
     text-decoration: none;
 }
-
-
-
 .revamp{
     background-color: #00142D;
     padding: 40px 0px 80px;
@@ -363,8 +353,9 @@ ul{
 .revamp .group{
     display: flex;
     flex-wrap: wrap;
-    /* margin: auto; */
-    justify-content: center;
+    margin: auto;
+    justify-content: space-between;
+    width: 1200px;
 }
 .col{
     text-align: left;
@@ -380,7 +371,8 @@ ul{
 }
 .revamp .button{
     text-align: right;
-    margin: 60px 150px;
+    margin: auto;
+    width: 1200px;
 }
 .revamp .button a{
     background-color: #9FDFDF	;
@@ -390,8 +382,10 @@ ul{
     text-decoration: none;
     display: inline-block;
 }
-
-
+.last{
+    margin: auto;
+    width: 1200px;
+}
 .revamp .last .wrap{
     display: flex;
     flex-wrap: wrap;
